--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,8 @@ ipch/
 *.opensdf
 *.sdf
 *.cachefile
+*.VC.db
+*.VC.VC.opendb
 
 # Visual Studio profiler
 *.psess
@@ -198,4 +200,4 @@ FakesAssemblies/
 
 # Custom ignores
 gallery.xml
-*.db
+project.lock.json
