--- a/Samples/DPIAwarenessPerWindow/cpp/DpiAwarenessContext.vcxproj.filters
+++ b/Samples/DPIAwarenessPerWindow/cpp/DpiAwarenessContext.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -26,21 +23,13 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="SetThreadDpiAwarenessContextSample.cpp">
+    <ClCompile Include="DpiAwarenessContext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="SetThreadDpiAwarenessContextSample.rc">
+    <ResourceCompile Include="DpiAwarenessContext.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="small.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="SetThreadDpiAwarenessContextSample.ico">
-      <Filter>Resource Files</Filter>
-    </Image>
   </ItemGroup>
 </Project>
