Update Radial Controller samples to include RS2 API usage

--- a/Samples/RadialController/cpp/RadialController.vcxproj.filters
+++ b/Samples/RadialController/cpp/RadialController.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\shared\fontawesome-webfont.ttf">
+      <Filter>Resource Files</Filter>
+    </Font>
+  </ItemGroup>
 </Project>
