Update credential provider, RadialController, and DPIAwareness
SampleWrapExistingCredentialProvider: SetUsageScenario can be
called multiple times, so reuse the wrapped credential each time
instead of recreating it.

RadialController: Demonstrate icon font glyphs and menu suppression.

DPIAwarenessPerMonitor/PerWindow: Show Creators Update improvements,
and show different results when the window is in different DPI
awareness modes.

--- a/Samples/RadialController/cpp/RadialController.vcxproj.filters
+++ b/Samples/RadialController/cpp/RadialController.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Font Include="..\shared\Symbols.ttf">
+      <Filter>Resource Files</Filter>
+    </Font>
+  </ItemGroup>
 </Project>
