--- a/CameraImageProcessing/DIPCodeConfigTool/DIPCodeConfigTool.csproj
+++ b/CameraImageProcessing/DIPCodeConfigTool/DIPCodeConfigTool.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSharpFiles\ConstItemsClass.cs" />
+    <Compile Include="CSharpFiles\FileIO.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
