--- a/Samples/DPIAwarenessPerWindow/cpp/DpiAwarenessContext.rc
+++ b/Samples/DPIAwarenessPerWindow/cpp/DpiAwarenessContext.rc
@@ -105,9 +105,9 @@ END
 //
 
 IDD_DIALOG1 DIALOGEX 0, 0, 304, 300
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | DS_CENTER
 CAPTION "High DPI Awareness Sample"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
+FONT 9, "Segoe UI", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Create a DPI unaware window\r\n(DPI_AWARENESS_CONTEXT_UNAWARE)",IDC_BUTTON_UNAWARE,7,111,290,30,BS_MULTILINE
     PUSHBUTTON      "Create a System DPI aware window\r\n(DPI_AWARENESS_CONTEXT_SYSTEM_AWARE)",IDC_BUTTON_SYSTEM,7,148,290,30,BS_MULTILINE
