--- a/Samples/DPIAwarenessPerWindow/client/DpiAwarenessContext.rc
+++ b/Samples/DPIAwarenessPerWindow/client/DpiAwarenessContext.rc
@@ -104,17 +104,18 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 304, 300
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | DS_CENTER
+IDD_DIALOG1 DIALOGEX 0, 0, 304, 339
+STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "High DPI Awareness Sample"
 FONT 9, "Segoe UI", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Create a DPI unaware window\r\n(DPI_AWARENESS_CONTEXT_UNAWARE)",IDC_BUTTON_UNAWARE,7,111,290,30,BS_MULTILINE
     PUSHBUTTON      "Create a System DPI aware window\r\n(DPI_AWARENESS_CONTEXT_SYSTEM_AWARE)",IDC_BUTTON_SYSTEM,7,148,290,30,BS_MULTILINE
-    PUSHBUTTON      "Create a Windows 8.1 era Per Monitor window (DPI_AWARENESS_CONTEXT_PER_MONITOR)",IDC_BUTTON_81,7,186,290,30,BS_MULTILINE
-    PUSHBUTTON      "Create a Windows 10 (1703) ""Creators Update"" Per Monitor DPI aware window (DPI_AWARENESS_CONTEXT_PER_MONITOR_V2)",IDC_BUTTON_1703,7,263,290,30,BS_MULTILINE
+    PUSHBUTTON      "Create a Windows 8.1 era Per-Monitor DPI aware window\r\n(DPI_AWARENESS_CONTEXT_PER_MONITOR)",IDC_BUTTON_81,7,186,290,30,BS_MULTILINE
+	PUSHBUTTON      "Create a Windows 10 (1607) Per-Monitor DPI aware window with non-client scaling\r\n(DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE + EnableNonClientDpiScaling())", IDC_BUTTON_1607, 7, 223, 290, 33, BS_MULTILINE
+    PUSHBUTTON      "Create a Windows 10 (1703) Per-Monitor DPI aware v2 window\r\n(DPI_AWARENESS_CONTEXT_PER_MONITOR_V2)",IDC_BUTTON_1703,7,264,290,30,BS_MULTILINE
     EDITTEXT        IDC_EDIT1,7,7,290,95,ES_MULTILINE | ES_READONLY | NOT WS_BORDER
-    PUSHBUTTON      "Create a Windows 10 (1607) Per Monitor window with non-client scaling\r\n(DPI_AWARENESS_CONTEXT_PER_MONITOR_AWARE + EnableNonClientDpiScaling())",IDC_BUTTON_1607,7,223,290,33,BS_MULTILINE
+    PUSHBUTTON      "Create a Windows 10 (1803) Per-Monitor DPI aware v2 window with mixed DPI hosting\r\n(DPI_AWARENESS_CONTEXT_PER_MONITOR_V2 + DPI_HOSTING_BEHAVIOR_MIXED)",IDC_BUTTON_1803,7,302,290,30,BS_MULTILINE
 END
 
 
@@ -131,7 +132,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 297
         TOPMARGIN, 7
-        BOTTOMMARGIN, 293
+        BOTTOMMARGIN, 332
     END
 END
 #endif    // APSTUDIO_INVOKED
